# Richman

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
richson/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml
richson/alembic/: env.py
richson/alembic/versions/: 001_init_schema.py
richson/src/richson/: __init__.py  config.py  logging_config.py  main.py
richson/src/richson/agents/: __init__.py  execution_agent.py  interpretation_agent.py  research_agent.py
richson/src/richson/agents/prompts/: __init__.py  execution.py  interpretation.py  (+1 more)
richson/src/richson/api/: __init__.py  analysis.py  assets.py  auth.py  content.py  events.py  health.py  jobs.py  market.py
richson/src/richson/cli/: __init__.py  backfill.py  backtest.py  weights.py
richson/src/richson/config/: event_metadata.py  wgc_quarterly.json
richson/src/richson/core/: __init__.py  adjustment.py  confidence.py  conflict.py  drawdown.py  event_monitor.py  pipeline.py  regime.py  scoring.py  support_resistance.py
richson/src/richson/datasources/: __init__.py  akshare_client.py  cache.py  cot.py  fred.py  polymarket.py  routing.py  stooq.py  wgc.py  yahoo.py
richson/src/richson/db/: __init__.py  models.py  repository.py
richson/src/richson/middleware/: __init__.py  tracing.py
richson/src/richson/schemas/: __init__.py  analysis.py  common.py  events.py  jobs.py  market.py
richson/src/richson/tasks/: __init__.py  scheduler.py
richson/src/richson/templates/: __init__.py  interpretation_en.py  interpretation_zh.py
richson/tests/: test_routing.py
(+833 files in other folders)
