[project]
name = "richson"
version = "0.1.0"
description = "Quantitative computation and LLM orchestration sidecar service"
requires-python = ">=3.12"
dependencies = [
    # web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # logging
    "structlog>=24.2",
    # http client
    "httpx>=0.27",
    # LLM orchestration
    "google-adk>=1.0",
    "litellm>=1.40",
    # data processing
    "numpy>=1.26",
    "pandas>=3.0",
    "pandas-ta-classic>=0.1",
    "cachetools>=5.3",
    # financial data sources
    "fredapi>=0.5",
    "yfinance>=0.2",
    "akshare>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/richson"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
